# leetui

./: Cargo.toml
api/: Cargo.toml
api/queries/: get_daily_challenge.graphql  get_problem.graphql  get_problem_list.graphql  get_profile.graphql  get_status.graphql  get_submission_details.graphql
api/src/: client.rs  error.rs  lib.rs  main.rs  utils.rs
api/src/models/: daily.rs  feed.rs  graphql.rs  mod.rs  profile.rs  question.rs  submission.rs
tui/: Cargo.toml  TODO.md
tui/src/: app.rs  handler.rs  main.rs  render.rs
tui/src/app/: app.rs  edit_render.rs  editor.rs  handler.rs  home_render.rs  mod.rs  utils.rs  workspace_render.rs
tui/src/app/multiplexer/: mod.rs  zellij.rs
tui/src/app/picker/: app.rs  mod.rs  render.rs
tui/src/app/rendering/: editor.rs  home.rs  mod.rs  utils.rs
