[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
htmd = "0.5.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.16.1", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
